--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -110,6 +110,30 @@
 		<array>
 			<dict>
 				<key>Comment</key>
+				<string>change HECI to IMEI</string>
+				<key>Count</key>
+				<integer>0</integer>
+				<key>Enabled</key>
+				<false/>
+				<key>Find</key>
+				<data>SEVDSQ==</data>
+				<key>Limit</key>
+				<integer>0</integer>
+				<key>Mask</key>
+				<data></data>
+				<key>OemTableId</key>
+				<data></data>
+				<key>Replace</key>
+				<data>SU1FSQ==</data>
+				<key>ReplaceMask</key>
+				<data></data>
+				<key>Skip</key>
+				<integer>0</integer>
+				<key>TableLength</key>
+				<integer>0</integer>
+			</dict>
+			<dict>
+				<key>Comment</key>
 				<string>change _DSM to XDSM</string>
 				<key>Count</key>
 				<integer>0</integer>
@@ -308,15 +332,13 @@
 			<true/>
 			<key>ForceExitBootServices</key>
 			<false/>
-			<key>ProtectCsmRegion</key>
-			<false/>
 			<key>ProtectSecureBoot</key>
 			<false/>
 			<key>ProvideCustomSlide</key>
 			<true/>
 			<key>SetupVirtualMap</key>
 			<true/>
-			<key>ShrinkMemoryMap</key>
+			<key>RebuildAppleMemoryMap</key>
 			<false/>
 			<key>SignalAppleOS</key>
 			<false/>
@@ -337,11 +359,13 @@
 				<key>connector-priority</key>
 				<data>AgYD</data>
 				<key>device_type</key>
-				<string>VGA compatible controller</string>
+				<string>GPU</string>
 				<key>hda-gfx</key>
 				<string>onboard-1</string>
 				<key>model</key>
-				<string>Sapphire Radeon RX 560 Pulse</string>
+				<string>AMD Radeon Pro 560</string>
+				<key>#name</key>
+				<string>AMD Radeon Pro 560</string>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1,0x0)/Pci(0x0,0x1)</key>
 			<dict>
@@ -803,7 +827,7 @@
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<dict>
 				<key>boot-args</key>
-				<string>dart=0 slide=255</string>
+				<string></string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>nvda_drv</key>
