--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -918,7 +918,6 @@
 		<key>Drivers</key>
 		<array>
 			<string>HfsPlus.efi</string>
-			<string>ApfsDriverLoader.efi</string>
 			<string>OpenRuntime.efi</string>
 			<string>AudioDxe.efi</string>
 			<string>NdkBootPicker.efi</string>
@@ -1025,6 +1024,19 @@
 			<true/>
 			<key>UnblockFsConnect</key>
 			<false/>
+		</dict>
+		<key>APFS</key>
+		<dict>
+			<key>EnableJumpstart</key>
+			<true/>
+			<key>HideVerbose</key>
+			<true/>
+			<key>JumpstartHotPlug</key>
+			<false/>
+			<key>MinVersion</key>
+			<integer>0</integer>
+			<key>MinDate</key>
+			<integer>0</integer>
 		</dict>
 	</dict>
 </dict>
