--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -773,7 +773,7 @@
 			<key>Vault</key>
 			<string>Optional</string>
 			<key>ScanPolicy</key>
-			<integer>3081475</integer>
+			<integer>0</integer>
 		</dict>
 		<key>Tools</key>
 		<array>
