--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -2,8 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>#Motherboard Type</key>
-	<string>MSI MPG Z390 GAMING PLUS</string>
+	<key>#Motherboard Type 1</key>
+	<string>MSI MPG Z390 Gaming Plus</string>
+	<key>#Motherboard Type 2</key>
+	<string>MSI MPG Z390 Gaming Pro Carbon AC</string>
+	<key>#Info 1</key>
+	<string>Description Hackintosh settings</string>
+	<key>#Info 2</key>
+	<string>https://www.hackintosh-forum.de/forum/thread/44970-cannon-lake-sammelthread-lauff%C3%A4hige-konfigurationen-desktop/?postID=542186#post542186</string>
 	<key>ACPI</key>
 	<dict>
 		<key>Add</key>
@@ -70,7 +76,7 @@
 			</dict>
 			<dict>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>Path</key>
 				<string>SSDT-ARPT-RP07-MSI.aml</string>
 			</dict>
@@ -410,13 +416,13 @@
 				<key>AAPL,slot-name</key>
 				<string>Internal@0,31,3</string>
 				<key>alc-layout-id</key>
-				<data>AQAAAA==</data>
+				<data>AgAAAA==</data>
 				<key>device_type</key>
 				<string>High Definition Audio</string>
 				<key>hda-gfx</key>
 				<string>onboard-2</string>
 				<key>layout-id</key>
-				<data>AQAAAA==</data>
+				<data>AgAAAA==</data>
 				<key>model</key>
 				<string>Cannon Lake PCH cAVS</string>
 			</dict>
@@ -433,22 +439,26 @@
 			<dict>
 				<key>AAPL,ig-platform-id</key>
 				<data>BwCbPg==</data>
-				<key>AAPL,slot-name</key>
-				<string>Internal@0,2,0</string>
 				<key>device-id</key>
 				<data>mz4AAA==</data>
-				<key>device_type</key>
-				<string>Display controller</string>
-				<key>framebuffer-con0-alldata</key>
-				<data>AgISAAAIAACHAQAAAwQSAAAIAACHAQAAAQESAAAIAACHAQAA</data>
+				<key>###enable-hdmi20</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con0-busid</key>
+				<data>AQAAAA==</data>
 				<key>framebuffer-con0-enable</key>
 				<data>AQAAAA==</data>
+				<key>framebuffer-con0-type</key>
+				<data>AAgAAA==</data>
+				<key>framebuffer-con1-busid</key>
+				<data>AgAAAA==</data>
+				<key>framebuffer-con1-enable</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con1-type</key>
+				<data>AAgAAA==</data>
 				<key>framebuffer-patch-enable</key>
 				<data>AQAAAA==</data>
 				<key>framebuffer-unifiedmem</key>
 				<data>AAAAgA==</data>
-				<key>model</key>
-				<string>Intel UHD Graphics 630 (Desktop 9 Series)</string>
 			</dict>
 		</dict>
 		<key>Block</key>
@@ -885,25 +895,25 @@
 	<dict>
 		<key>Automatic</key>
 		<true/>
-		<key>UpdateDataHub</key>
-		<true/>
 		<key>Generic</key>
 		<dict>
+			<key>AdviseWindows</key>
+			<false/>
 			<key>MLB</key>
-			<string>C02934401J9LNV9A8</string>
+			<string>C02827902CDJG36JC</string>
 			<key>ROM</key>
-			<data>VX510O+Y</data>
+			<data>xcCk5SHs</data>
 			<key>SpoofVendor</key>
 			<true/>
-			<key>SupportsCsm</key>
-			<false/>
 			<key>SystemProductName</key>
-			<string>iMac19,1</string>
+			<string>iMacPro1,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02ZWDZTJV3Q</string>
+			<string>C02X106VHX87</string>
 			<key>SystemUUID</key>
-			<string>DFF052CE-F94D-4287-AB3D-C4C0F3305C65</string>
+			<string>36299788-3EAF-4A61-B896-C4BF2C15BFA4</string>
 		</dict>
+		<key>UpdateDataHub</key>
+		<true/>
 		<key>UpdateNVRAM</key>
 		<true/>
 		<key>UpdateSMBIOS</key>
