--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -38,12 +38,6 @@
 				<key>Enabled</key>
 				<true/>
 				<key>Path</key>
-				<string>SSDT-UIAC.aml</string>
-			</dict>
-			<dict>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
 				<string>ssdt-i7-9700.aml</string>
 			</dict>
 			<dict>
@@ -176,8 +170,12 @@
 	<dict>
 		<key>MmioWhitelist</key>
 		<array/>
+		<key>Patch</key>
+		<array/>
 		<key>Quirks</key>
 		<dict>
+			<key>AllowRelocationBlock</key>
+			<false/>
 			<key>AvoidRuntimeDefrag</key>
 			<true/>
 			<key>DevirtualiseMmio</key>
@@ -220,12 +218,16 @@
 		<dict>
 			<key>PciRoot(0x0)/Pci(0x1,0x0)/Pci(0x0,0x0)</key>
 			<dict>
+				<key>#@0,name</key>
+				<string>ATY,Orinoco</string>
+				<key>#CFG_FB_LIMIT</key>
+				<data>Aw==</data>
+				<key>#model</key>
+				<string>AMD Radeon Pro 560</string>
 				<key>#name</key>
 				<string>AMD Radeon Pro 560</string>
 				<key>AAPL,slot-name</key>
 				<string>Internal@0,1,0/0,0</string>
-				<key>CFG,CFG_FB_LIMIT</key>
-				<data>Aw==</data>
 				<key>connector-count</key>
 				<data>AwAAAA==</data>
 				<key>connector-priority</key>
@@ -234,8 +236,6 @@
 				<string>GPU</string>
 				<key>hda-gfx</key>
 				<string>onboard-1</string>
-				<key>model</key>
-				<string>AMD Radeon Pro 560</string>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1,0x0)/Pci(0x0,0x1)</key>
 			<dict>
@@ -282,10 +282,10 @@
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1f,0x3)</key>
 			<dict>
-				<key>#alc-layout-id</key>
-				<data>AgAAAA==</data>
 				<key>AAPL,slot-name</key>
 				<string>Internal@0,31,3</string>
+				<key>alc-layout-id</key>
+				<data>AgAAAA==</data>
 				<key>device_type</key>
 				<string>High Definition Audio</string>
 				<key>hda-gfx</key>
@@ -471,6 +471,24 @@
 				<key>PlistPath</key>
 				<string>Contents/Info.plist</string>
 			</dict>
+			<dict>
+				<key>Arch</key>
+				<string>Any</string>
+				<key>BundlePath</key>
+				<string>RestrictEvents.kext</string>
+				<key>Comment</key>
+				<string></string>
+				<key>Enabled</key>
+				<false/>
+				<key>ExecutablePath</key>
+				<string>Contents/MacOS/RestrictEvents</string>
+				<key>MaxKernel</key>
+				<string></string>
+				<key>MinKernel</key>
+				<string></string>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+			</dict>
 		</array>
 		<key>Block</key>
 		<array/>
@@ -569,8 +587,6 @@
 		</dict>
 		<key>Debug</key>
 		<dict>
-			<key>#Ausgabe-in-Datei-mit Debug-OV-Version#Target</key>
-			<integer>67</integer>
 			<key>AppleDebug</key>
 			<false/>
 			<key>ApplePanic</key>
@@ -592,18 +608,18 @@
 		<array/>
 		<key>Security</key>
 		<dict>
-			<key>##ApECID</key>
+			<key>ApECID</key>
 			<integer>0</integer>
-			<key>##SecureBootModel</key>
+			<key>SecureBootModel</key>
 			<string>Disabled</string>
 			<key>AllowNvramReset</key>
 			<true/>
 			<key>AllowSetDefault</key>
 			<true/>
-			<key>ApECID</key>
-			<integer>0</integer>
 			<key>AuthRestart</key>
 			<false/>
+			<key>BlacklistAppleUpdate</key>
+			<true/>
 			<key>BootProtect</key>
 			<string>Bootstrap</string>
 			<key>DmgLoading</key>
@@ -620,7 +636,7 @@
 			<data></data>
 			<key>ScanPolicy</key>
 			<integer>3081987</integer>
-			<key>SecureBootModel</key>
+			<key>#SecureBootModel</key>
 			<string>j137</string>
 			<key>Vault</key>
 			<string>Optional</string>
@@ -640,6 +656,10 @@
 				<string>UEFI Shell</string>
 				<key>Path</key>
 				<string>OpenShell.efi</string>
+				<key>RealPath</key>
+				<false/>
+				<key>TextMode</key>
+				<false/>
 			</dict>
 			<dict>
 				<key>Arguments</key>
@@ -654,20 +674,6 @@
 				<string>VerifyMsrE2</string>
 				<key>Path</key>
 				<string>VerifyMsrE2.efi</string>
-			</dict>
-			<dict>
-				<key>Arguments</key>
-				<string></string>
-				<key>Auxiliary</key>
-				<true/>
-				<key>Comment</key>
-				<string>Not signed for security reasons</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Name</key>
-				<string>Screenshot LCtrl + LAlt + F12</string>
-				<key>Path</key>
-				<string>CrScreenshotDxe.efi</string>
 			</dict>
 		</array>
 	</dict>
@@ -735,6 +741,8 @@
 				<string>bluetoothInternalControllerInfo</string>
 				<string>flagstate</string>
 				<string>fmm-computer-name</string>
+				<string>fmm-mobileme-token-FMM</string>
+				<string>fmm-mobileme-token-FMM-BridgeHasAccount</string>
 				<string>nvda_drv</string>
 				<string>prev-lang:kbd</string>
 			</array>
@@ -754,6 +762,8 @@
 	<dict>
 		<key>Automatic</key>
 		<true/>
+		<key>CustomMemory</key>
+		<false/>
 		<key>Generic</key>
 		<dict>
 			<key>AdviseWindows</key>
@@ -775,8 +785,6 @@
 			<key>SystemUUID</key>
 			<string>F254C1E7-16D0-4128-B24B-5F9E920433B0</string>
 		</dict>
-		<key>CustomMemory</key>
-		<false/>
 		<key>UpdateDataHub</key>
 		<true/>
 		<key>UpdateNVRAM</key>
@@ -816,7 +824,7 @@
 			<key>MinimumVolume</key>
 			<integer>20</integer>
 			<key>PlayChime</key>
-			<true/>
+			<string>Enabled</string>
 			<key>VolumeAmplifier</key>
 			<integer>0</integer>
 		</dict>
