--- a/EFI/OC/Kexts/Lilu.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/Lilu.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>21D49</string>
+	<string>20G527</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -42,16 +42,12 @@
 	<string>1321</string>
 	<key>DTXcodeBuild</key>
 	<string>13C100</string>
-	<key>GIT COMMIT HASH</key>
-	<string>ec63d06</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>as.vit9696.Lilu</string>
-			<key>GITCOMMITHASH</key>
-			<string>ec63d06</string>
 			<key>IOClass</key>
 			<string>Lilu</string>
 			<key>IOMatchCategory</key>
