Update to Ventura

--- a/EFI/OC/Kexts/IntelMausi.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/IntelMausi.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>21E230</string>
+	<string>20G527</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -42,8 +42,6 @@
 	<string>1321</string>
 	<key>DTXcodeBuild</key>
 	<string>13C100</string>
-	<key>GIT COMMIT HASH</key>
-	<string>8123cea</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>IntelMausi</key>
