--- a/EFI/OC/Kexts/SMCProcessor.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/SMCProcessor.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20G624</string>
+	<string>22D49</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.0</string>
+	<string>1.3.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,29 +25,31 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.3.0</string>
+	<string>1.3.1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>13C100</string>
+	<string>14C18</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>12.1</string>
+	<string>13.1</string>
 	<key>DTSDKBuild</key>
-	<string>21C46</string>
+	<string>22C55</string>
 	<key>DTSDKName</key>
-	<string>macosx12.1</string>
+	<string>macosx13.1</string>
 	<key>DTXcode</key>
-	<string>1321</string>
+	<string>1420</string>
 	<key>DTXcodeBuild</key>
-	<string>13C100</string>
+	<string>14C18</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>as.vit9696.SMCProcessor</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>as.vit9696.SMCProcessor</string>
+			<key>GitCommitHash</key>
+			<string>8623634</string>
 			<key>IOClass</key>
 			<string>SMCProcessor</string>
 			<key>IOMatchCategory</key>
